* [2017-05-15] RFC4880: added implementation of Partial Body Lengths
* [2017-05-13] release 1.3.0 of LibTMCG
* [2017-05-13] moved to GNU FDL v1.3
* [2017-05-04] fixed RBC implementation for artificial case where t=0
* [2017-04-27] improved timing attack resilience of mpz_spowm()
* [2017-04-26] improved timing attack resilience of mpz_fspowm()
* [2017-04-23] AIO: bugfixes and change to EtA paradigma 
* [2017-04-12] fixed some small bugs found by coverity scan
* [2017-03-31] added simple manpages for DKG tools
* [2017-03-26] added general interpolation for DKG and changed dkg-decrypt 
* [2017-02-04] added check (t-mpz) to spot optimizations of mpz_fspowm()
* [2017-01-25] DKG, ASTC: fixed robustness issues in Generate() and Share()
* [2017-01-21] VTMF: added generation and check of canonical group generator
* [2017-01-20] VTMF: improved NIZK generation (added group parameter hashing)
* [2016-12-31] release 1.2.0 of LibTMCG
* [2016-12-24] added GNUnet integration for DKG tools
* [2016-11-14] added a very limited interface for OpenPGP (cf. RFC 4880) 
* [2016-03-26] improved complexity of hash function g() used as random oracle
* [2016-03-24] mpz_shash* using now hash function g() instead of h()
* [2016-03-20] protection against malicious verifiers through EDCF for SHVZK
* [2016-03-02] provides a distributed coin-flipping (EDCF) protocol
* [2016-02-27] provides a distributed signature scheme (NTS)
* [2016-02-24] provides a reliable broadcast (RBC) protocol
* [2016-02-15] provides a distributed key generation (DKG) protocol
* [2016-02-07] provides a non-interactive version of the rotation protocol
* [2016-02-07] provides a non-interactive version of the shuffle protocol
* [2016-02-06] new global symbol TMCG_MAX_FPOWM_N for restricting memory usage
* [2016-02-02] increase some security and bounding parameters
* [2016-01-31] implements an 1-out-of-n oblivious transfer protocol
* [2016-01-16] added configure option --with-gmp=<path>