@@ -61,6 +61,7 @@ class GennaroJareckiKrawczykRabinDKG
 	private:
 		mpz_t					*fpowm_table_g, *fpowm_table_h;
 		const unsigned long int			F_size, G_size;
+		bool					use_very_strong_randomness;
 	
 	public:
 		mpz_t					p, q, g, h;
@@ -75,11 +76,13 @@ class GennaroJareckiKrawczykRabinDKG
 			mpz_srcptr p_CRS, mpz_srcptr q_CRS, mpz_srcptr g_CRS,
 			mpz_srcptr h_CRS,
 			const unsigned long int fieldsize = TMCG_DDH_SIZE,
-			const unsigned long int subgroupsize = TMCG_DLSE_SIZE);
+			const unsigned long int subgroupsize = TMCG_DLSE_SIZE,
+			bool use_very_strong_randomness_in = true);
 		GennaroJareckiKrawczykRabinDKG
 			(std::istream &in,
 			const unsigned long int fieldsize = TMCG_DDH_SIZE,
-			const unsigned long int subgroupsize = TMCG_DLSE_SIZE);
+			const unsigned long int subgroupsize = TMCG_DLSE_SIZE,
+			bool use_very_strong_randomness_in = true);
 		void PublishState
 			(std::ostream &out) const;
 		bool CheckGroup
