@@ -1,3 +1,4 @@
+* [2017-05-19] DKG: use very strong randomness from libgcrypt (long term keys)
 * [2017-05-15] RFC4880: added implementation of Partial Body Lengths
 * [2017-05-13] release 1.3.0 of LibTMCG
 * [2017-05-13] moved to GNU FDL v1.3
